# guile-wm

./: .gitignore  README.md  configure.ac  guile-wm  guix.scm  wm-init-sample.scm
module/guile-wm/: icccm.scm  reparent.scm  user.scm
module/guile-wm/module/: randr.scm  window-cycle.scm
